--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 4000
 MYSQL_HOST = localhost
-MYSQL_USER = root
-MYSQL_PASSWORD = 
+MYSQL_USER = diiego
+MYSQL_PASSWORD = diego12
 MYSQL_DB = prueba
